refactor: refactor some code parts